syntax = "proto2";

message TestPacked {
    repeated int32 varints = 4 [packed=true];
    repeated sfixed32 sfixed32s = 5 [packed=true];
}

message TestUnpacked {
    repeated int32 varints = 4 [packed=false];
    repeated sfixed32 sfixed32s = 5 [packed=false];
}

message TestIssue281 {
    repeated fixed32 values = 1 [packed=true];
}

message TestPackedDefault {
    repeated uint32 varints = 1;
}
